--- a/Libraries/YukariMSP/CMakeLists.txt
+++ b/Libraries/YukariMSP/CMakeLists.txt
@@ -17,10 +17,14 @@ set(TESTS
   test/MSPClientTest.cpp
   test/MSPParsersTest.cpp)
 
+set(TEST_DEPS
+  ${PROJECT_NAME}
+  ${LIB_DEPS})
+
 add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${LIB_DEPS})
 
 include(AddTests)
-AddTests(${PROJECT_NAME} TESTS LIB_DEPS)
+AddTests(${PROJECT_NAME} TESTS TEST_DEPS)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Libraries)
