--- a/Libraries/YukariIMU/CMakeLists.txt
+++ b/Libraries/YukariIMU/CMakeLists.txt
@@ -24,10 +24,14 @@ set(LIB_DEPS
 set(TESTS
   test/IMUFrameTest.cpp)
 
+set(TEST_DEPS
+  ${PROJECT_NAME}
+  ${LIB_DEPS})
+
 add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${LIB_DEPS})
 
 include(AddTests)
-AddTests(${PROJECT_NAME} TESTS LIB_DEPS)
+AddTests(${PROJECT_NAME} TESTS TEST_DEPS)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Libraries)
