wip: logging refactor

--- a/Libraries/YukariCommon/CMakeLists.txt
+++ b/Libraries/YukariCommon/CMakeLists.txt
@@ -1,12 +1,11 @@
 project(YukariCommon)
 
 set(HEADERS
-  ConfigurationManager.h
   LoggingService.h
+  NamedDistLogSink.h
   SignalBroker.h)
 
 set(SOURCES
-  ConfigurationManager.cpp
   LoggingService.cpp
   SignalBroker.cpp)
 
