add factory for cloud grabbers, sart refactoring capture

--- a/Libraries/YukariCloudCapture/CMakeLists.txt
+++ b/Libraries/YukariCloudCapture/CMakeLists.txt
@@ -1,6 +1,8 @@
 project(YukariCloudCapture)
 
 set(HEADERS
+  CloudGrabberFactory.h
+  DummyCloudGrabber.h
   ICloudGrabber.h
   OpenNI2CloudGrabber.h
   PCLCloudGrabberWrapper.h)
