--- a/Executables/CapturePointClouds/CMakeLists.txt
+++ b/Executables/CapturePointClouds/CMakeLists.txt
@@ -15,12 +15,12 @@ set(SOURCES
 add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
-  YukariCaptureTriggers
   YukariCLI
   YukariCommon
   YukariIMU
   YukariMaths
   YukariMSP
+  YukariTriggers
   serial
   ${PCL_LIBRARIES})
 
