--- a/Executables/Test/TriggerTest/CMakeLists.txt
+++ b/Executables/Test/TriggerTest/CMakeLists.txt
@@ -8,8 +8,8 @@ set(SOURCES
 add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
-  YukariCaptureTriggers
   YukariCommon
+  YukariTriggers
   serial)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Executables/Test)
