--- a/Executables/Test/CloudGrabberTest/CMakeLists.txt
+++ b/Executables/Test/CloudGrabberTest/CMakeLists.txt
@@ -10,6 +10,9 @@ add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
   YukariCommon
+  YukariMaths
+  YukariIMU
+  serial
   ${PCL_LIBRARIES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Executables/Test)
