--- a/Libraries/YukariProcessing/CMakeLists.txt
+++ b/Libraries/YukariProcessing/CMakeLists.txt
@@ -2,7 +2,8 @@ project(YukariProcessing)
 
 set(HEADERS
   CloudOperations.h
-  GenerateMeshFromPointCloud.h)
+  GenerateMeshFromPointCloud.h
+  SpatialOperations.h)
 
 set(SOURCES)
 
