--- a/TeensyIMUDevice/platformio.ini
+++ b/TeensyIMUDevice/platformio.ini
@@ -8,7 +8,7 @@ build_flags = -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DGPS_SERIAL=Serial3 -DGPS_
 framework = arduino
 platform = teensy
 board = teensy31
-build_flags = -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DGPS_SERIAL=Serial3 -DGPS_BAUD=9600
+build_flags = -DMSP_SERIAL=Serial -DMSP_BAUD=115200 -DGPS_SERIAL=Serial2 -DGPS_BAUD=9600
 
 [env:gps_dev]
 framework = arduino
