--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,9 @@ add_subdirectory(Executables/Test/CloudGrabberTest)
 add_subdirectory(Executables/Test/IMUGrabberTest)
 add_subdirectory(Executables/Test/TriggerTest)
 
+add_subdirectory(Executables/PCLDemos/FastMesh)
+add_subdirectory(Executables/PCLDemos/NormalDistributionsTransform)
+
 # Docs
 add_doxygen(
   Doxyfile
