--- a/Executables/PCLDemos/NormalDistributionsTransform/CMakeLists.txt
+++ b/Executables/PCLDemos/NormalDistributionsTransform/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES
 add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
+  YukariCommon
   ${PCL_LIBRARIES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Executables/PCLDemos)
