Add skeleton files for incremental alignment

--- a/Executables/Capture/CMakeLists.txt
+++ b/Executables/Capture/CMakeLists.txt
@@ -4,6 +4,7 @@ set(HEADERS
   CaptureController.h
   CaptureFactory.h
   IPostCaptureTask.h
+  NDTIncrementalAlignment.h
   TaskSaveRawCloud.h
   TaskSaveRawIMUFrame.h
   Types.h)
@@ -11,6 +12,7 @@ set(HEADERS
 set(SOURCES
   CaptureController.cpp
   CaptureFactory.cpp
+  NDTIncrementalAlignment.cpp
   TaskSaveRawCloud.cpp
   TaskSaveRawIMUFrame.cpp
   main.cpp)
