reliable alignment working

--- a/Libraries/YukariProcessing/CMakeLists.txt
+++ b/Libraries/YukariProcessing/CMakeLists.txt
@@ -5,6 +5,7 @@ set(HEADERS
   GenerateMeshFromPointCloud.h
   IFrameProcessingTask.h
   SpatialOperations.h
+  TaskAppendTransformedClouds.h
   TaskNDTIncrementalAlignment.h
   TaskSaveRawCloud.h
   TaskSaveRawIMUFrame.h)
