remove unused project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,11 +72,8 @@ add_subdirectory(Libraries/YukariTriggers)
 
 # Executables
 add_subdirectory(Executables/Capture)
+add_subdirectory(Executables/PCDToMesh)
 add_subdirectory(Executables/PCDViewer)
-
-add_subdirectory(Executables/Processing/PCDToMesh)
-add_subdirectory(Executables/Processing/PointCloudAlignment)
-
 add_subdirectory(Executables/Test/CloudGrabberTest)
 add_subdirectory(Executables/Test/IMUGrabberTest)
 add_subdirectory(Executables/Test/TriggerTest)
