add skeleton file for world segment

--- a/Libraries/YukariProcessing/CMakeLists.txt
+++ b/Libraries/YukariProcessing/CMakeLists.txt
@@ -9,6 +9,7 @@ set(HEADERS
   TaskAppendTransformedClouds.h
   TaskNDTIncrementalAlignment.h
   TaskNDTWorldAlignment.h
+  TaskNDTWorldSegmentAlignment.h
   TaskSaveRawCloud.h
   TaskSaveRawIMUFrame.h)
 
