post processing executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ add_subdirectory(Libraries/YukariTriggers)
 add_subdirectory(Executables/Capture)
 add_subdirectory(Executables/PCDToMesh)
 add_subdirectory(Executables/PCDViewer)
+add_subdirectory(Executables/PostProcessing)
 add_subdirectory(Executables/Test/CloudGrabberTest)
 add_subdirectory(Executables/Test/IMUGrabberTest)
 add_subdirectory(Executables/Test/TriggerTest)
