--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ sudo: required
 before_install:
   - sudo add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl -y
   - sudo apt-get -qq update
-  - sudo apt-get install -y cmake libboost-all-dev libpcl-all libeigen3-dev doxygen graphviz
+  - sudo apt-get install -y cmake libboost-all-dev libeigen3-dev libpcl-1.7-all doxygen graphviz
   - pip install -U platformio
   - cmake --version
 
