--- a/TeensyIMUDevice/platformio.ini
+++ b/TeensyIMUDevice/platformio.ini
@@ -1,17 +1,23 @@
+[env:calibration]
+framework = arduino
+platform = teensy
+board = teensy31
+build_flags = -DLED_PIN=13 -DCALIBRATE -DMPU_INTERRUPT_PIN=20 -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DGPS_SERIAL=Serial3 -DGPS_BAUD=115200 -DDEBUG_SERIAL=Serial -DDEBUG_BAUD=9600
+
 [env:debug]
 framework = arduino
 platform = teensy
 board = teensy31
-build_flags = -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DDISABLE_GPS -DGPS_SERIAL=Serial3 -DGPS_BAUD=115200 -DDEBUG -DDEBUG_SERIAL=Serial -DDEBUG_BAUD=9600
+build_flags = -DLED_PIN=13 -DMPU_INTERRUPT_PIN=20 -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DDISABLE_GPS -DDISABLE_BARO -DGPS_SERIAL=Serial3 -DGPS_BAUD=115200 -DDEBUG -DDEBUG_SERIAL=Serial -DDEBUG_BAUD=9600
 
 [env:release]
 framework = arduino
 platform = teensy
 board = teensy31
-build_flags = -DMSP_SERIAL=Serial -DMSP_BAUD=115200 -DDISABLE_GPS -DGPS_SERIAL=Serial2 -DGPS_BAUD=115200
+build_flags = -DLED_PIN=13 -DMPU_INTERRUPT_PIN=20 -DMSP_SERIAL=Serial -DMSP_BAUD=115200 -DDISABLE_GPS -DGPS_SERIAL=Serial2 -DGPS_BAUD=115200
 
 [env:gps_dev]
 framework = arduino
 platform = teensy
 board = teensy31
-build_flags = -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DGPS_SERIAL=Serial3 -DGPS_BAUD=9600 -DDISABLE_IMU -DDISABLE_BARO -DDEBUG -DDEBUG_SERIAL=Serial -DDEBUG_BAUD=9600
+build_flags = -DLED_PIN=13 -DMPU_INTERRUPT_PIN=20 -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DGPS_SERIAL=Serial3 -DGPS_BAUD=9600 -DDISABLE_IMU -DDISABLE_BARO -DDEBUG -DDEBUG_SERIAL=Serial -DDEBUG_BAUD=9600
