Add skeleton files for file grabbers
[ci skip]

--- a/Libraries/YukariCloudCapture/CMakeLists.txt
+++ b/Libraries/YukariCloudCapture/CMakeLists.txt
@@ -5,6 +5,7 @@ set(HEADERS
   DummyCloudGrabber.h
   ICloudGrabber.h
   OpenNI2CloudGrabber.h
+  PCDFileCloudGrabber.h
   PCLCloudGrabberWrapper.h)
 
 set(SOURCES)
