Use Madgwick library, get quaternion

--- a/imu/ARM_IMU/Makefile
+++ b/imu/ARM_IMU/Makefile
@@ -1,7 +1,7 @@
 V = 1
 
 BINARY = main
-OBJS += $(BINARY).o clock.o console.o mpu6000.o
+OBJS += $(BINARY).o clock.o console.o mpu6000.o MadgwickAHRS.o
 
 LDSCRIPT = stm32f4.ld
 
