Accel calib on Teeny IMU

--- a/imu/Teensy/platformio.ini
+++ b/imu/Teensy/platformio.ini
@@ -10,11 +10,17 @@ platform = teensy
 board = teensy31
 build_flags = -DLED_PIN=13 -DMPU_INTERRUPT_PIN=20 -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DDISABLE_GPS -DDISABLE_BARO -DGPS_SERIAL=Serial3 -DGPS_BAUD=115200 -DDEBUG -DDEBUG_SERIAL=Serial -DDEBUG_BAUD=9600
 
+[env:serialplot]
+framework = arduino
+platform = teensy
+board = teensy31
+build_flags = -DLED_PIN=13 -DMPU_INTERRUPT_PIN=20 -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DDISABLE_GPS -DDISABLE_BARO -DGPS_SERIAL=Serial3 -DGPS_BAUD=115200 -DSERIALPLOT -DDEBUG_SERIAL=Serial -DDEBUG_BAUD=9600
+
 [env:release]
 framework = arduino
 platform = teensy
 board = teensy31
-build_flags = -DLED_PIN=13 -DMPU_INTERRUPT_PIN=20 -DMSP_SERIAL=Serial -DMSP_BAUD=115200 -DDISABLE_GPS -DGPS_SERIAL=Serial2 -DGPS_BAUD=115200
+build_flags = -DLED_PIN=13 -DMPU_INTERRUPT_PIN=20 -DMSP_SERIAL=Serial -DMSP_BAUD=115200 -DDISABLE_GPS -DDISABLE_BARO -DGPS_SERIAL=Serial2 -DGPS_BAUD=115200
 
 [env:gps_dev]
 framework = arduino
