Add ICP alignment method
(untested)

--- a/Libraries/YukariProcessing/CMakeLists.txt
+++ b/Libraries/YukariProcessing/CMakeLists.txt
@@ -4,9 +4,10 @@ set(HEADERS
   CloudOperations.h
   FrameProcessingTaskFactory.h
   IFrameProcessingTask.h
-  ITaskNDTAlignment.h
+  ITaskAlignment.h
   TaskAppendTransformedClouds.h
   TaskDownsampleCloud.h
+  TaskICPWorldAlignment.h
   TaskNDTIncrementalAlignment.h
   TaskNDTWorldAlignment.h
   TaskNDTWorldSegmentAlignment.h
