Add normal extimation demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,8 @@ add_subdirectory(Executables/Test/CloudGrabberTest)
 add_subdirectory(Executables/Test/IMUGrabberTest)
 add_subdirectory(Executables/Test/TriggerTest)
 
+add_subdirectory(Executables/NormalEstimationTest)
+
 # Docs
 add_doxygen(
   Doxyfile
