Move processing implementations to cpp files

--- a/Libraries/YukariProcessing/CMakeLists.txt
+++ b/Libraries/YukariProcessing/CMakeLists.txt
@@ -15,7 +15,19 @@ set(HEADERS
   TaskSaveRawCloud.h
   TaskSaveRawIMUFrame.h)
 
-set(SOURCES)
+set(SOURCES
+  FrameProcessingTaskFactory.cpp
+  IFrameProcessingTask.cpp
+  ITaskAlignment.cpp
+  TaskAppendTransformedClouds.cpp
+  TaskDownsampleCloud.cpp
+  TaskICPWorldAlignment.cpp
+  TaskNDTIncrementalAlignment.cpp
+  TaskNDTWorldAlignment.cpp
+  TaskNDTWorldSegmentAlignment.cpp
+  TaskPairAlignment.cpp
+  TaskSaveRawCloud.cpp
+  TaskSaveRawIMUFrame.cpp)
 
 set(LIB_DEPS
   YukariCommon
@@ -26,10 +38,14 @@ set(TESTS
   test/IFrameProcessingTaskTest.cpp
   test/ITaskAlignmentTest.cpp)
 
+set(TEST_DEPS
+  ${PROJECT_NAME}
+  ${LIB_DEPS})
+
 add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${LIB_DEPS})
 
 include(AddTests)
-AddTests(${PROJECT_NAME} TESTS LIB_DEPS)
+AddTests(${PROJECT_NAME} TESTS TEST_DEPS)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Libraries)
